--- a/asset/style/styleN.css
+++ b/asset/style/styleN.css
@@ -243,7 +243,7 @@ nav {
   }
 }
 nav a {
-  margin-left: 1.5rem;
+  margin-left: 0.5rem;
   color: var(--color-2);
   text-align: right;
   font-weight: 300;
